2000-11-03  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Look backwards for closest schedule change when
	clock is incremented more than a tick.

2000-11-02  Tristan Tarrant  <nadir@users.sourceforge.net>

	* tools/u7shpload.c: Require latest gimp include files (>=1.1.26)

2000-11-02  Tristan Tarrant  <nadir@users.sourceforge.net>

	* tools/u7shpload.c: Beginnings of tile (8x8) support
	* data/marketpl.mid: MIDI for intro menu
	* audio/Audio.*, audio/Midi.*: add methods for loading generic MIDI

2000-10-30  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode.cc: Kludges for Test of Courage.

2000-10-28  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Include weapon area in add_dirty(); cleans up
	graphics left behind when large weapon is carried.

2000-10-27  Jeff Freedman  <jeff@amy.nerble.net>

	* Straightened out virtue stones.

2000-10-26  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed (actually, worked-around) virtue-stone bug.

2000-10-24  Jeff Freedman  <jeff@amy.nerble.net>

	* Reagants bug & resolution-change bug fixed.
	* Version changed to Alpha.01.

2000-10-19  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed 2 bugs: Crash in Despise after generator, and problem with
	readying 2-handed weapons on 'restore'.

2000-10-17  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: Look for local 'data' if necessary.
	* If motion blocked, try to swap positions with actor
	that's in the way.

2000-10-16  Jeff Freedman  <jeff@amy.nerble.net>

	* exult.cc: Try_key handles the 'k' key.

2000-10-15  Jeff Freedman  <jeff@amy.nerble.net>

	* objs.cc: >Trying< to fix dungeon rendering bug in Courage Test.
	* Restart game clock after a restore.

2000-10-13  Willem Jan Palenstijn <palenstijn@wanadoo.nl>

	* drag.cc: weight checking disabled when in hack_mover mode
	* exult.cc, gameclk.cc: added alt-i=infravision. (palette never darkens)

2000-10-12  Jeff Freedman  <jeff@amy.nerble.net>

	* readnpcs.cc: Fixed monster bug that's been causing lots of