@@ -77,6 +77,7 @@ install: $(EXEC)
 	strip $(EXEC) -o c:/ultima7/$(EXEC)
 	md c:\ultima7\data
 	copy data\exult.flx c:\ultima7\data
+	copy data\midisfx.flx c:\ultima7\data
 
 run:
 	start $(EXEC)
