@@ -11,6 +11,8 @@
 
 		Better SI support
 
+		Midi Sound Effects (Windows Only)
+
 		...
 
 
